RESOLVED FIXED89180
Event dispatcher should use InsertionPoint::hasDistribution instead of InsertinPoint::isActive in re-targeting.
https://bugs.webkit.org/show_bug.cgi?id=89180
Summary Event dispatcher should use InsertionPoint::hasDistribution instead of Insert...
Hayato Ito
Reported 2012-06-15 00:11:07 PDT
Event dispatcher should use InsertionPoint::hasDistribution() instead of InsertionPoint::isActive() in re-targeting. InsertionPoint::isActive() returns true even when the insertion point does not select any nodes and has fallback elements. That causes a wrong re-targeting result.
Attachments
fix (5.36 KB, patch)
2012-06-15 01:00 PDT, Hayato Ito
no flags
Hayato Ito
Comment 1 2012-06-15 01:00:10 PDT
WebKit Review Bot
Comment 2 2012-06-18 12:18:30 PDT
Comment on attachment 147767 [details] fix Clearing flags on attachment: 147767 Committed r120615: <http://trac.webkit.org/changeset/120615>
WebKit Review Bot
Comment 3 2012-06-18 12:18:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.